--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header nav{
 }
 
  nav .nav-right .menu-icon{
-    background-image: url(/imagenes/756729-200.png);
+    background-image: url(756729-200.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
